clusters/home/apps/photoprism/photoprism/configs/photoprism-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism-ingressroute
  namespace: photoprism
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://photoprism.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Photoprism
    gethomepage.dev/group: Entertainment
    gethomepage.dev/icon: mdi-camera
    gethomepage.dev/app: photoprism # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Photoprism
    #gethomepage.dev/widget.type: "photoprism"
    #gethomepage.dev/widget.url: "https://photoprism.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`photoprism.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: photoprism
      port: 2342
  tls:
    secretName: photoprism-certificate-secret
